--- a/backend-sample/package.json
+++ b/backend-sample/package.json
@@ -2,7 +2,7 @@
   "name": "backend-sample",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "engines": {
     "node": ">=18 <23",
     "npm": ">=9"
